# zopfleech

./: CMakeLists.txt  README.md
doc/: GZIP.md
licenses/: Licenses.txt
src/: CMakeLists.txt  Makefile  gztools.cpp  main.cpp  main.h  ungzlib.c  ungzlib.h  zopflipng.cpp  zopgz.c
src/zopfli/: CMakeLists.txt  LzFind.c  LzFind.h  blocksplitter.h  deflate.c  gzip_container.c  gzip_container.h  katajainen.c  katajainen.h  lz77.c  lz77.h  squeeze.c  squeeze.h  symbols.h  util.c  util.h  zlib_container.c  zopfli.h  zopfli_gz.c  zopfli_gzip.cpp  zopfli_io.c  zopfli_lib.c  zopfli_lib.h
